--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <H1>HELLO,  CHECKING</H1>
+    <h1>My name is plabon.</h1>
+    <p>Currently studying in <b>Computer Science Engineering</b> at <strong>Daffodil international university.</strong> <i>I'm pasionate about learning new technology. </i> <em> I'm well deciplined and hard-working.</em> <small>Skills in Programming Languages are Python,C,Java. In case of designing -Javascript,React.js,Redux,Express.js,Node.js,Mongodb,Bootstrap,Tailwind,ES6,DaisyUI,Rest API,Axios,React Query,Stripe,React Router,Material UI,Firebase,Github,Netlify,Figma Html5,CSS3. And database field - others Git,Github. </small> </p>
+ 
 </body>
 </html>
