anchor and br tag added

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <h1>My name is plabon.</h1>
     <p>Currently studying in <b>Computer Science Engineering</b> at <strong>Daffodil international university.</strong> <i>I'm pasionate about learning new technology. </i> <em> I'm well deciplined and hard-working.</em> <small>Skills in Programming Languages are Python,C,Java. In case of designing -Javascript,React.js,Redux,Express.js,Node.js,Mongodb,Bootstrap,Tailwind,ES6,DaisyUI,Rest API,Axios,React Query,Stripe,React Router,Material UI,Firebase,Github,Netlify,Figma Html5,CSS3. And database field - others Git,Github. </small> </p>
  <img src="images/1622955529676.png" alt="">
+ <br>
+ <p>br- It is generally used in poem or address where the division of line is necessary. It is an empty tag, which means it does not need a company of end tag.</p>
+ <a href="https://www.google.com/" target="_blank">Go To Google</a>
 </body>
 </html>
