--- a/shadow.html
+++ b/shadow.html
@@ -8,11 +8,38 @@
     <style>
         h1 {
   color: white;
+  /* offset-x | offset-y | blur-radius | color */
   text-shadow: 2px 2px 4px #000000;
 }
-    </style>
+/* offset-x | offset-y | blur-radius | spread-radius | color */
+h2{
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+blockquote {
+  padding: 20px;
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+}
+div p {
+  box-shadow: 0 0 0 2em #f4aab9, 0 0 0 4em #66ccff;
+  margin: 6em;
+  padding: 1em;
+}
+   </style>
 </head>
 <body>
+    <p>The following example shows a white text with black shadow:</p>
     <h1>Text shadow effect!</h1>
+    <h2>Box shadow effect!</h2>
+    <blockquote>
+        <q>
+          You may shoot me with your words,<br />
+          You may cut me with your eyes,<br />
+          You may kill me with your hatefulness,<br />
+          But still, like air, I'll rise.
+        </q>
+        <p>&mdash; Maya Angelou</p>
+      </blockquote>
+      <div><p>Hello World</p></div>
 </body>
 </html>
