select option tag added

--- a/first.html
+++ b/first.html
@@ -43,6 +43,11 @@ Regular Text <small>This is minimini</small> This is regular
     <input type="checkbox"><br>
     <input type="radio">
     <input type="file"><br>
+    <select name="" id="">
+        <option value="">pizza</option>
+        <option value="">Burger</option>
+        <option value="">Chicken</option>
+    </select>
     <button>submit</button>
     <button>cancel</button
     </form>
