--- a/shadow.html
+++ b/shadow.html
@@ -21,8 +21,8 @@ blockquote {
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 }
 div p {
-  box-shadow: 0 0 0 2em #f4aab9, 0 0 0 4em #66ccff;
-  margin: 6em;
+  box-shadow: 0 0 0 2em #f4aab9, 0 0 0 4em #66ccff, 0 0 0 6em rebeccapurple;
+  margin: 8em;
   padding: 1em;
 }
    </style>
