input date type added

--- a/first.html
+++ b/first.html
@@ -48,6 +48,9 @@ Regular Text <small>This is minimini</small> This is regular
         <option value="">Burger</option>
         <option value="">Chicken</option>
     </select>
+    <input type="date" name="" id="">
+ <input type="datetime-local" name="" id="">
+ 
     <button>submit</button>
     <button>cancel</button
     </form>
