--- a/devp.html
+++ b/devp.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Plabon portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="image/plabon1st.png">
   </head>
   <body>
     <section class="top-banner flexible-container">
