২) What do you understand by the term ‘Version Control System’? answer added

--- a/git-fiveQuestionAns.html
+++ b/git-fiveQuestionAns.html
@@ -27,7 +27,7 @@
             <tr>
                 <td>2</td>
                 <td>২) What do you understand by the term ‘Version Control System’?</td>
-                <td></td>
+                <td>Version control systems are software tools that help software teams manage changes to source code over time. As development environments have accelerated, version control systems help software teams work faster and smarter.</td>
             </tr>
         </tbody>
     </table>
